conference-ticket-generator/src/index.css
/* ... */
.file-input {
  display: none;
}

.img-upload-overlay {
  border: 3px solid var(--brightgreen);
  /* display: grid;
  place-content: center; */
  display: block;

  text-align: center;
  gap: 0.5rem;
  border-radius: 2rem;
  background-color: var(--green);
  height: 100%;
  aspect-ratio: 1;
  padding: 0.5rem;
}

.img-upload-overlay svg {
  margin-inline: auto;
  margin-top: 40%;
}

.img-uploader img {
  width: 100%;
  aspect-ratio: 1;
  inset: 0;
  position: absolute;
  z-index: 1;
  border-radius: 2rem;
  object-fit: cover;
}

.img-uploader:hover .img-upload-overlay {
  z-index: 2;
  position: relative;
  opacity: 0.7;
}

.inputs-container {
  padding-block: 2rem;
}

.inputs-container label {
  display: inline-block;
  padding-top: 1.5rem;
  padding-bottom: 0.5rem;
}

textarea {
  width: 100%;
  padding: 1rem;
  border-radius: 6px;
}

/* input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active,
input:-internal-autofill-selected,
input:-internal-autofill-selected:hover,
input:-internal-autofill-selected:focus,
input:-internal-autofill-selected:active {
  transition-delay: 3600s !important;
} */

.email-input-wrapper input {
  border: none;
  outline: none;
}

form input {
  border: 1px solid var(--hrgreen);
}

/* 
TICKET */

.ticket {
  display: grid;
  place-content: center;
  /* width: 100%; */
}

.ticket-container {
  background-image: url(../src/assets/ticketFrame.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  margin-top: 2rem;
  max-width: 500px;
  min-height: 80vh;
  padding: 2rem;
  display: grid;
  place-items: center;
}

.ticket-main-content-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
  width: 70%;
  height: 100%;
}

.ticket-details-wrapper {
  border-radius: 1rem;
  padding: 1rem;
  display: grid;
  place-items: center;
  background-image: radial-gradient(
    farthest-side at 50% 10%,
    var(--green),
    var(--darkgreen)
  );
  width: 100%;
  min-height: 80%;
}

.ticket-details-wrapper h1 {
  font-size: 2.5rem;
}

.ticket-img-wrapper {
  width: 50%;
  aspect-ratio: 1;
  margin-top: 1rem;
  border-radius: 12px;
  background-image: linear-gradient(
    to bottom,
    var(--brightgreen),
    var(--hrgreen)
  );
  display: flex;
  justify-content: center;
  align-items: center;
}

.ticket-details-wrapper img {
  height: 94%;
  width: 94%;
  object-fit: cover;
  border-radius: inherit;
}

.ticket-details-container {
  background-color: var(--midgreen);
  margin: 1rem;
  margin-bottom: 0rem;
  width: 100%;
  padding: 4px;
  border: 1px solid var(--teagreen);
}

.ticket-details-container .ticket-details-part {
  display: flex;
  justify-content: start;
  align-items: center;
}

.event-location-wrapper span {
  display: inline-block;
  padding-top: 0.5rem;
  font-size: 10px;
}

.ticket-detail-item {
  padding: 4px;
  width: 50%;
  padding: 0.5rem;
  border-right: 1px solid var(--teagreen);
  border-bottom: 1px solid var(--teagreen);
  display: grid;
  gap: 0.6rem;
}

.ticket-detail-item:nth-child(2) {
  border-right: none;
}

.ticket-details-part:last-child {
  padding: 10px 4px;
  display: grid;
  gap: 0.6rem;
}

.ticket-detail-item p,
.ticket-details-part:last-child p {
  font-size: 10px;
  opacity: 0.33;
  text-align: left;
}

.ticket-detail-item h6,
.ticket-details-part:last-child h6 {
  font-size: 12px;
  text-align: left;
}

.ticket-details-part:last-child {
  display: grid;
}

.barcode {
  display: grid;
  justify-content: center;
  align-items: center;
  height: 20%;
}

.ticket-body .btns {
  max-width: 80%;
  margin-inline: auto;
}

/* Responsive Styles */
@media (max-width: 1024px) {
  h1 {
    font-size: 3rem;
  }

  nav {
    width: 95%;
  }

  .tickets-list {
    grid-template-columns: 1fr;
  }
}

@media (max-width: 768px) {
  main {
    flex-direction: column;
    align-items: center;
  }

  h1 {
    font-size: 2.5rem;
  }

  .nav-links {
    display: none;
  }

  .main-content {
    padding: 1.5rem;
  }

  .fest-desc {
    flex-direction: column;
    gap: 1rem;
    padding-inline: 1rem;
    text-align: center;
  }

  .btns {
    flex-direction: column-reverse;
    gap: 0.5rem;
  }
}
/* ... */

